Fix styling for input elements in index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,12 @@
   <title>URL Shortener</title>
   <style>
     body {
+
       font-family: system-ui, sans-serif;
       max-width: 600px;
       margin: 3rem auto;
     }
-    input, button {
+    input {
       padding: 0.6rem;
       margin-top: 0.5rem;
       width: 100%;
