--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,7 @@
 <body>
   <h1>URL Shortener</h1>
 
-  <input type="password" id="apiKey" placeholder="Paste API key" />
-  <button onclick="toggleKey()">Show / Hide</button>
+  <input id="apiKey" type="password" placeholder="Paste API key" />
   
   <input id="urlInput" placeholder="https://example.com" />
   <button onclick="createLink()">Create</button>
